tests/fixtures/invalid/pow_set_float_bool.py
# Cannot call pow() with Set[int], Float, Bool
x = pow({1, 2, 3}, 1.0, True)
